tests/machine/x/fortran/string_in_operator.f90
program main
  implicit none
  integer :: s
  s = "catch"
  print *, any(s == "cat")
  print *, any(s == "dog")
end program main
